--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5766,4 +5766,34 @@ button.close {
   .hidden-print {
     display: none !important; } }
 
+html, body {
+  height: 100%;
+  background-color: #f0b935; }
+
+.container {
+  width: 100%; }
+
+.row {
+  height: 100%; }
+
+.fill {
+  min-height: 100%;
+  height: 100%; }
+
+#menu {
+  height: 100%;
+  float: left;
+  min-height: 100%;
+  display: block; }
+  #menu ul {
+    list-style: none;
+    padding-left: 0;
+    font-size: 1.5em; }
+
+#content {
+  height: 100%;
+  min-height: 100%;
+  display: block;
+  background-color: #fffddd; }
+
 /*# sourceMappingURL=app.css.map */
