--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,40 @@
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+html, body{
+  height: 100%;
+  background-color: $comiclog-primary;
+}
+
+.container{
+  width: 100%;
+}
+
+.row{
+  height: 100%;
+}
+
+.fill{
+  min-height: 100%;
+  height: 100%
+}
+
+#menu{
+  height: 100%;
+  float: left;
+  min-height: 100%;
+  display: block;
+    ul {
+      list-style: none;
+      padding-left: 0;
+      font-size: 1.5em;
+    }
+}
+
+#content{
+  height: 100%;
+  min-height: 100%;
+  display: block;
+  background-color: #fffddd;
+}
