--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -51,3 +51,20 @@ html, body{
   display: block;
   background-color: #fffddd;
 }
+
+#user-info{
+  left: 0;
+  bottom: 0;
+  font-size: 1.5em;
+  text-align: center;
+  width: 100%;
+}
+
+.wrapper-update{
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 10px;
+  right: 0;
+}
